<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="App_Tapper" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retrobg" translatesAutoresizingMaskIntoConstraints="NO" id="GQ6-4i-uY8">
                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                <animations/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lkj-Rt-gd0">
                                <rect key="frame" x="217" y="336" width="167" height="72"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="Lkj-Rt-gd0" secondAttribute="height" multiplier="205:88" id="vNG-eO-cKR"/>
                                </constraints>
                                <state key="normal" image="play_button"/>
                                <connections>
                                    <action selector="playButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="T8F-Fm-TkH"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tapper" translatesAutoresizingMaskIntoConstraints="NO" id="lJP-a1-JgI">
                                <rect key="frame" x="20" y="68" width="560" height="107"/>
                                <animations/>
                            </imageView>
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CDH-Vy-Xw0">
                                <rect key="frame" x="178" y="52" width="244" height="268"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="CDH-Vy-Xw0" secondAttribute="height" multiplier="61:67" id="TYU-tU-Rbm"/>
                                </constraints>
                                <state key="normal" image="coin"/>
                                <connections>
                                    <action selector="tapButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XGQ-86-EVO"/>
                                </connections>
                            </button>
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 Taps" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFf-eE-vEN">
                                <rect key="frame" x="227" y="342" width="147" height="60"/>
                                <animations/>
                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="How many taps to win?" textAlignment="center" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="zzh-J9-Nnn">
                                <rect key="frame" x="75" y="235" width="450" height="58"/>
                                <animations/>
                                <fontDescription key="fontDescription" type="system" pointSize="64"/>
                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                <variation key="heightClass=compact">
                                    <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                </variation>
                            </textField>
                        </subviews>
                        <animations/>
                        <color key="backgroundColor" red="1" green="0.92941176470588238" blue="0.71372549019607845" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="CDH-Vy-Xw0" firstAttribute="centerY" secondItem="GQ6-4i-uY8" secondAttribute="centerY" multiplier="3:5" id="50h-mu-AE5"/>
                            <constraint firstItem="zzh-J9-Nnn" firstAttribute="width" secondItem="GQ6-4i-uY8" secondAttribute="width" multiplier="3:4" id="Apv-vd-9u2"/>
                            <constraint firstAttribute="trailing" secondItem="GQ6-4i-uY8" secondAttribute="trailing" id="GtS-2d-Vdz"/>
                            <constraint firstItem="TFf-eE-vEN" firstAttribute="centerY" secondItem="GQ6-4i-uY8" secondAttribute="centerY" multiplier="6:5" id="IQW-Uj-PTh"/>
                            <constraint firstItem="lJP-a1-JgI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="MF2-ux-2RP"/>
                            <constraint firstItem="zzh-J9-Nnn" firstAttribute="centerY" secondItem="GQ6-4i-uY8" secondAttribute="centerY" multiplier="17:20" id="R9K-39-tj2"/>
                            <constraint firstItem="Lkj-Rt-gd0" firstAttribute="centerY" secondItem="GQ6-4i-uY8" secondAttribute="centerY" multiplier="6:5" id="RME-9M-vIe"/>
                            <constraint firstItem="CDH-Vy-Xw0" firstAttribute="centerX" secondItem="GQ6-4i-uY8" secondAttribute="centerX" id="TK1-So-n2b"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="GQ6-4i-uY8" secondAttribute="bottom" id="Xuo-xj-0Qh"/>
                            <constraint firstItem="zzh-J9-Nnn" firstAttribute="height" secondItem="GQ6-4i-uY8" secondAttribute="height" multiplier="1:10" id="ant-j9-hEw"/>
                            <constraint firstItem="lJP-a1-JgI" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="48" id="dmz-JG-G3g"/>
                            <constraint firstItem="zzh-J9-Nnn" firstAttribute="top" relation="greaterThanOrEqual" secondItem="lJP-a1-JgI" secondAttribute="bottom" constant="10" id="dpH-MS-O00"/>
                            <constraint firstItem="CDH-Vy-Xw0" firstAttribute="width" relation="lessThanOrEqual" secondItem="GQ6-4i-uY8" secondAttribute="width" multiplier="1:2" id="efn-TF-OV6"/>
                            <constraint firstItem="TFf-eE-vEN" firstAttribute="centerX" secondItem="GQ6-4i-uY8" secondAttribute="centerX" id="evd-gi-9Sp"/>
                            <constraint firstItem="Lkj-Rt-gd0" firstAttribute="centerX" secondItem="GQ6-4i-uY8" secondAttribute="centerX" id="gz6-eD-THU"/>
                            <constraint firstItem="zzh-J9-Nnn" firstAttribute="centerX" secondItem="GQ6-4i-uY8" secondAttribute="centerX" id="i1R-B2-z8y"/>
                            <constraint firstItem="Lkj-Rt-gd0" firstAttribute="height" secondItem="GQ6-4i-uY8" secondAttribute="height" multiplier="1:8" id="kDD-P5-7HG"/>
                            <constraint firstItem="GQ6-4i-uY8" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="pm4-lZ-LZN"/>
                            <constraint firstAttribute="trailingMargin" secondItem="lJP-a1-JgI" secondAttribute="trailing" id="vnp-Nz-nv4"/>
                            <constraint firstItem="GQ6-4i-uY8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yGV-oc-FQD"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="gameTitleImage" destination="lJP-a1-JgI" id="HRt-yb-G3e"/>
                        <outlet property="playButton" destination="Lkj-Rt-gd0" id="CP2-2d-ty0"/>
                        <outlet property="tapButton" destination="CDH-Vy-Xw0" id="IDH-RS-Kcv"/>
                        <outlet property="tapGoalTextField" destination="zzh-J9-Nnn" id="IP1-PA-824"/>
                        <outlet property="tapOutputLabel" destination="TFf-eE-vEN" id="0nM-Yd-Thz"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
    <resources>
        <image name="coin" width="244" height="268"/>
        <image name="play_button" width="356" height="175"/>
        <image name="retrobg" width="800" height="800"/>
        <image name="tapper" width="497" height="107"/>
    </resources>
</document>
